@@ -166,6 +166,9 @@ Other Changes
 
   Closes #5568
 
+* Added confidence level ``CONTROL_FLOW`` for warnings relying on assumptions
+  about control flow.
+
 * ``used-before-assignment`` now considers that assignments in a try block
   may not have occurred when the except or finally blocks are executed.
 
